hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics5.php.exp
File "tconst_on_generics5.php", line 39, characters 14-17:
Some type constraint(s) here are violated (Typing[4323])
  File "tconst_on_generics5.php", line 25, characters 31-32:
  `T1` is a constrained type parameter
  File "tconst_on_generics5.php", line 25, characters 37-39:
  Some type constraint(s) are violated here
  File "tconst_on_generics5.php", line 25, characters 31-32:
  `T1` is a constrained type parameter
  File "tconst_on_generics5.php", line 25, characters 37-39:
  Expected `Box`
  File "tconst_on_generics5.php", line 25, characters 47-47:
  But got `B`
